src/styles/global.css
/* ... */
.content-bubble:hover{
    background: #FFF;
    cursor: default;
}


.project-tag-filters{
  display: flex;
  gap: 15px;
  width: fit-content;
}


.list-item-title{
    display: inline-flex;
    align-items: center;
    text-decoration: none;
    width: fit-content;
    gap: 7.5px;

    font-family: "Atkinson Hyperlegible Next";
    font-weight: 500;
    font-size: .90rem;
    text-decoration: none;
}

.list-item-title:hover{
    text-decoration: underline;
}

.list-item-title.no-link:hover{
    text-decoration: none;
}

.text-list-item{
    display: flex;
    width: fit-content;
    gap: 7.5px;
    align-items: center;
}


.list-item-details{
    display: flex;
    width: fit-content;
    gap: 7.5px;
    font-size: .75rem;

    font-family: "Atkinson Hyperlegible Mono"; 
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: .10em;
    text-decoration: none;
    color: #AEAEAE;
}


.list-item-details a {
    display: flex;
    width: fit-content;
    gap: 7.5px;
    font-size: .75rem;

    font-family: "Atkinson Hyperlegible Mono"; 
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: .10em;
    text-decoration: none;
    color: #AEAEAE;
}

.list-item-details a:hover {
    font-weight: 500;
    color: #2d2d2d;
}

.all-map-list-items{
    display: flex;
    gap: 20px;
    flex-direction: column;
}

.info-bubble {
  display: flex;
  flex-direction: row;
  width: fit-content;
  gap: 7.5px;
  align-items: start;

  text-decoration: none;

  font-family: "Atkinson Hyperlegible Mono"; 
  font-weight: 400;
  text-transform: uppercase;
  font-size: .75rem;
  letter-spacing: .10em;
  color: #AEAEAE;
  transition: color .5s ease;
}

.info-bubble:hover {
  background: #FFF;
}

.bold-hover:hover {
  color: var(--dark-gray);
}


/* MODIFIERS */

.add-margin{
  margin-top: 1rem;
}

.remove-side-padding{
  padding-left: 0px;
}



/* MODIFIERS END */


.title-bubble {
  display: inline-flex;
  padding: 10px 20px;
  align-items: center;
  cursor: pointer; 
  text-decoration: none;
  width: fit-content;
  gap: 7.5px;
  align-items: center;

  border-radius: 100px;
  border: 1px solid #E8E8E8;
  background: #FAFAFA;
  font-family: "Atkinson Hyperlegible Next";
  font-weight: 500;
  font-size: .90rem;
  color: #2d2d2d;
  text-decoration: none;
}

.title-bubble:hover{
cursor: default;
}


.content-links.header:hover{
  cursor: default;
  background: #FAFAFA;
  text-transform: capitalize;
}


.horizontal-header{
  display: flex;
  flex-direction: row;
  gap: 7.5px;
  width: 100%;
  align-items: center;
}


.list-item-details.large{
  font-size: .80rem;
  color: #2d2d2d;
}

/* A-LINK DETAILS BELOW */

a:visited {
  color: inherit;
  background-color: inherit;
  text-decoration: inherit;
}

a{
  color: inherit;
  text-decoration: none;
}

/* END LINK DETAILS */



.filter-by-tag{
font-family: "Atkinson Hyperlegible Mono"; 
font-weight: 300;
text-transform: uppercase;
font-size: .75rem;
letter-spacing: .10em;
text-decoration: none;
color: #AEAEAE;
}


.filter-by-tag:visited{
color: #AEAEAE;
}


.filter-by-tag:hover{
font-weight: 500;
}

.filter-by-tag + .filter-by-tag::before {
  content: "/";
  margin-right: 15px;
  font-weight: 300;
}

.filter-by-tag + .filter-by-tag:hover::before {
  font-weight: 300;
}



:root {
  --line-gray: #E8E8E8;
  --fill-gray: #FAFAFA;
  --med-gray: #AEAEAE;
  --dark-gray: #2D2D2D;

}


body {
  max-width: 1200px;
  margin: 0 auto;
}


.list-div-40{
  display: flex;
  flex-direction: column;
  gap: 40px;
}




/* IMAGE SETTINGS BELOW */


/* controls the entire div images are rendered into */
.image-collection-div{
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 30px
}

/* controls each individual image item div*/
.image-entry{
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 20px;
  position: relative;
}


/* very specific bg image settings used for gallery, bookshelf, featured work, old gold */
.bg-image {
  inset: 0;
  width: 100%;
  height: auto;
  object-fit: cover;
  z-index: 0;
  border-radius: 10px;
  border-radius: 10px;
  outline: 1px solid rgba(0, 0, 0, 0.1);
  outline-offset: -1px;
}


/* spcial link styling for bubbles that sit atop images */
.link-details.images{
  border-radius: 50px;
  width: auto;
  color: rgba(255, 255, 255, 0.85);
  border: 1px solid rgba(255, 255, 255, 0.2);
  background: rgba(255, 255, 255, 0.20);
  backdrop-filter: blur(1px);
  position: absolute;
  bottom: 15px;
  right: 15px;
  padding: 7.5px 15px;
  z-index: 1;
}

.link-details.images.dark{
  border-radius: 50px;
  width: auto;
  color: rgba(255, 255, 255, 0.85);
  border: 0.5px solid rgba(0, 0, 0, 0.02);
  background: rgba(0, 0, 0, 0.15);
  backdrop-filter: blur(1.5px);
  position: absolute;
  bottom: 15px;
  right: 15px;
  padding: 7.5px 15px;
  z-index: 1;
}


.image-light-border {
  width: 100%;
  height: auto;
  border-radius: 10px;
  outline: 1px solid rgba(255, 255, 255, 0.85);
  outline-offset: -1px;
}

.image-dark-border {
  width: 100%;
  height: auto;
  border-radius: 10px;
  outline: 1px solid rgba(0, 0, 0, 0.1);
  outline-offset: -1px;
}


/*linked images */
.linked-image {
  width: 100%;
  height: auto;
  border-radius: 10px;
  transition: filter 0.3s ease;
  outline: 1px solid rgba(0, 0, 0, 0.1);
  outline-offset: -1px;
}

.linked-image:hover {
  filter: brightness(0.75);
}




/* IMAGES END */







/* COMPENDIUM / PROJECTS */


.all-compendium-project-entries{
    display: flex;
    flex-direction: column;
    width: 100%;
    gap: 2.25rem
}

.compendium-project-entry{
    display: flex;
    flex-direction: column;
    width: 100%;
    overflow: hidden;
    border-radius: 10px;
    outline: 1px solid rgba(0, 0, 0, 0.1);
    outline-offset: -1px;
}

.compendium-project-image{
    width: 100%;
    height: auto;
}

.context-and-links{
    display: flex;
    flex-direction: column;
    gap: 1.35rem;
    padding: 0px 1.5rem;
    margin: 1.5rem 0px;
}
/* ... */

